alteração das unidades e criação das variaveis

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="agenda-flex">
               <div><img src="./assets/images/submarcas/submarca-cafe.svg" width="90px" alt="Café com Bíblia"></div>
               <div class="agenda-hora">08:00h</div>
-              <a href="https://www.instagram.com/ibcidade/" target="_blank"> <img class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> @ibcidade</a>
+              <a href="https://www.instagram.com/ibcidade/reels/" target="_blank"> <img class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
             </div>
           </div>
 
@@ -122,6 +122,7 @@
             <div class="agenda-flex">
               <div>Oração</div>
               <div class="agenda-hora">15:00h</div>
+              <span>Na sede da igreja</span>
             </div>
           </div>
 
@@ -130,7 +131,7 @@
             <div class="agenda-flex">
               <div><img class="submarca-celebrando" src="./assets/images/submarcas/submarca-celebrando.svg" width="100px" alt=""></div>
               <div class="agenda-hora">20:00h</div>
-              <a href="">ibcidade</a>
+              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
             </div>
           </div>
 
@@ -139,26 +140,26 @@
             <div class="agenda-flex">
               <div>Arrow</div>
               <div class="agenda-hora">19:30h</div>
-              <a href="">ibcidade</a>
+              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
             </div>
           </div>
 
           <div class="agenda-bloco">
             <h3>Domingo</h3>
-            <div class="agenda-flex ">
+            <div class="agenda-flex domingo">
               <div><img class="submarca-idv" src="./assets/images/submarcas/submarca-idv.svg" alt="IDV"></div>
               <div class="agenda-hora">09:00h</div>
-              <a href="">ibcidade</a>
+              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
             </div>
-            <div class="agenda-flex">
+            <div class="agenda-flex domingo">
               <div><img class="submarca-vertical" src="./assets/images/marcas/marca-vertical.svg" alt="Logo IBCidade"></div>
               <div class="agenda-hora">10:30h | 18:00h</div>
-              <a href="">ibcidade</a>
+              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
             </div>
             <div class="agenda-flex">
               <div><img class="submarca-kids" src="./assets/images/submarcas/submarca-kids.svg" alt="Celebra Kids"></div>
               <div class="agenda-hora">18:00h</div>
-              <a href="">ibcidade</a>
+              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
             </div>
           </div>
         </div>
