criação da imagem de fundo da seção agenda

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&family=Sora:wght@100;200;300;400;500;600;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
+  <link rel="stylesheet" href="./assets/css/titulos.css">
 
   <title>IBCidade - Um lugar de pessoas simples que amam a Jesus</title>
 
@@ -52,7 +53,7 @@
     <section class="video">
       <div class="video-container">
         <div class="horario">
-          <h2>Celebrações ao vivo todos os domingos</h2>
+          <h2 class="titulo-verde-azul">Celebrações ao vivo todos os domingos</h2>
           <div>10:30h | 18h</div>
           <a class="btn-youtube" href="https://www.youtube.com/c/ibcidade" target="_blank">
             <ion-icon name="logo-youtube"></ion-icon>
@@ -72,7 +73,7 @@
     <section class="app">
       <div class="app-container">
         <div class="app-informacoes">
-          <h2>Já baixou o<br>app IBCidade?</h2>
+          <h2 class="titulo-lilas-azul">Já baixou o<br>app IBCidade?</h2>
           <p>O app IBCidade chegou para deixar nossa igreja ainda mais conectada. Baixe agora e fique por dentro de tudo
             que está acontecendo</p>
 
@@ -103,7 +104,7 @@
     <div class="agenda">
       <div class="agenda-container">
         <div>
-          <h2>Agenda<br>da semana</h2>
+          <h2 class="titulo-azul-verde">Agenda<br>da semana</h2>
           <p>Aqui você encontrará o que acontece na IBCidade durante a semana.</p>
         </div>
 
@@ -167,7 +168,18 @@
     </div>
     </section>
 
-    <section class="links-container"></section>
+    <section class="areas">
+      <h2 class="titulo-lilas-azul area-titulo-posicao">Conheça a IBCidade</h2>
+      <div class="areas-container">
+        <a href="#"><img src="assets/images/submarcas/submarca-pgms.svg" alt="Mulher Unica"></a>
+        <a href="#"><img src="assets/images/submarcas/submarca-mulher.svg" alt="Mulher Unica"></a>
+        <a href="#"><img src="assets/images/submarcas/submarca-celebrando.svg" alt="Celebrando Restauração"></a>
+        <a href="#"><img src="assets/images/submarcas/submarca-familia.svg" alt="Família IBCidade"></a>
+        <a href="#"><img src="assets/images/submarcas/submarca-idv.svg" alt="Família IBCidade"></a>
+        <a href="#"><img src="assets/images/submarcas/submarca-kids.svg" alt="Família IBCidade"></a>
+        <a href="#"><img src="assets/images/submarcas/submarca-parabolas.svg" alt="Família IBCidade"></a>
+      </div>
+    </section>
     <section class="dizimos-container"></section>
     </main>
     <footer>
