trabalhando na area de logos

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
     </section>
 
     <section class="areas">
-      <h2 class="titulo-lilas-azul area-titulo-posicao">Conheça a IBCidade</h2>
+      <h2 class="titulo-rosa-laranja area-titulo-posicao">Conheça a IBCidade</h2>
       <div class="areas-container">
         <a href="#"><img src="assets/images/submarcas/submarca-pgms.svg" alt="Mulher Unica"></a>
         <a href="#"><img src="assets/images/submarcas/submarca-mulher.svg" alt="Mulher Unica"></a>
