--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
               <div>App Store</div>
             </a>
 
-            <a class="btn-google-store" href="https://play.google.com/store/apps/details?id=br.com.inchurch.batistacidadejardim" target="_blank">
+            <a class="btn-google-store"
+              href="https://play.google.com/store/apps/details?id=br.com.inchurch.batistacidadejardim" target="_blank">
               <img class="logo-google" src="./assets/images/icons/icons8-google-play.svg" width="30px" alt="">
               <div>Google Play</div>
             </a>
@@ -106,15 +107,22 @@
         <div>
           <h2 class="titulo-azul-verde">Agenda<br>da semana</h2>
           <p>Aqui você encontrará o que acontece na IBCidade durante a semana.</p>
+          <div class="agenda-imagens">
+            <img class="submarca-cafe" src="./assets/images/submarcas/submarca-cafe.svg" width="90px" alt="Café com Bíblia">
+            <img class="submarca-celebrando" src="./assets/images/submarcas/submarca-celebrando.svg" width="90px" alt="Café com Bíblia">
+            <img class="submarca-idv" src="./assets/images/submarcas/submarca-idv.svg" width="90px" alt="Café com Bíblia">
+            <img class="submarca-kids" src="./assets/images/submarcas/submarca-kids.svg" alt="Celebra Kids">
+          </div>
         </div>
 
         <div>
           <div class="agenda-bloco">
             <h3>Segunda à sexta</h3>
             <div class="agenda-flex">
-              <div><img src="./assets/images/submarcas/submarca-cafe.svg" width="90px" alt="Café com Bíblia"></div>
+              <div>Café com Bíblia</div>
               <div class="agenda-hora">08:00h</div>
-              <a href="https://www.instagram.com/ibcidade/reels/" target="_blank"> <img class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+              <a href="https://www.instagram.com/ibcidade/reels/" target="_blank"> <img class="icone-instagram"
+                  src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
             </div>
           </div>
 
@@ -130,9 +138,10 @@
           <div class="agenda-bloco">
             <h3>Sexta</h3>
             <div class="agenda-flex">
-              <div><img class="submarca-celebrando" src="./assets/images/submarcas/submarca-celebrando.svg" width="100px" alt=""></div>
+              <div>Celebrando Restauração</div>
               <div class="agenda-hora">20:00h</div>
-              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
+                  src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
             </div>
           </div>
 
@@ -141,26 +150,31 @@
             <div class="agenda-flex">
               <div>Arrow</div>
               <div class="agenda-hora">19:30h</div>
-              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
+                  src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
             </div>
           </div>
 
           <div class="agenda-bloco">
             <h3>Domingo</h3>
             <div class="agenda-flex domingo">
-              <div><img class="submarca-idv" src="./assets/images/submarcas/submarca-idv.svg" alt="IDV"></div>
+              <div>IDV</div>
               <div class="agenda-hora">09:00h</div>
-              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
+                  src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
             </div>
             <div class="agenda-flex domingo">
-              <div><img class="submarca-vertical" src="./assets/images/marcas/marca-vertical.svg" alt="Logo IBCidade"></div>
+              <div>Celebrações
+              </div>
               <div class="agenda-hora">10:30h | 18:00h</div>
-              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
+                  src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
             </div>
             <div class="agenda-flex">
-              <div><img class="submarca-kids" src="./assets/images/submarcas/submarca-kids.svg" alt="Celebra Kids"></div>
+              <div>Kids</div>
               <div class="agenda-hora">18:00h</div>
-              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram" src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+              <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
+                  src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
             </div>
           </div>
         </div>
@@ -169,7 +183,7 @@
     </section>
 
     <section class="areas">
-      <h2 class="titulo-rosa-laranja area-titulo-posicao">Conheça a IBCidade</h2>
+      <h2 class="titulo-rosa-laranja area-titulo-posicao">Conheça melhor a IBCidade</h2>
       <div class="areas-container">
         <a href="#"><img src="assets/images/submarcas/submarca-pgms.svg" alt="Mulher Unica"></a>
         <a href="#"><img src="assets/images/submarcas/submarca-mulher.svg" alt="Mulher Unica"></a>
@@ -180,7 +194,12 @@
         <a href="#"><img src="assets/images/submarcas/submarca-parabolas.svg" alt="Família IBCidade"></a>
       </div>
     </section>
-    <section class="dizimos-container"></section>
+    <section class="dizimos">
+      <div class="dizimos-container">
+        <h2>Dízimos e Ofertas</h2>
+      </div>
+
+    </section>
     </main>
     <footer>
       <section class="footer-container"></section>
