finalizado seção dízimos e ofertas

--- a/index.html
+++ b/index.html
@@ -108,9 +108,12 @@
           <h2 class="titulo-azul-verde">Agenda<br>da semana</h2>
           <p>Aqui você encontrará o que acontece na IBCidade durante a semana.</p>
           <div class="agenda-imagens">
-            <img class="submarca-cafe" src="./assets/images/submarcas/submarca-cafe.svg" width="90px" alt="Café com Bíblia">
-            <img class="submarca-celebrando" src="./assets/images/submarcas/submarca-celebrando.svg" width="90px" alt="Café com Bíblia">
-            <img class="submarca-idv" src="./assets/images/submarcas/submarca-idv.svg" width="90px" alt="Café com Bíblia">
+            <img class="submarca-cafe" src="./assets/images/submarcas/submarca-cafe.svg" width="90px"
+              alt="Café com Bíblia">
+            <img class="submarca-celebrando" src="./assets/images/submarcas/submarca-celebrando.svg" width="90px"
+              alt="Café com Bíblia">
+            <img class="submarca-idv" src="./assets/images/submarcas/submarca-idv.svg" width="90px"
+              alt="Café com Bíblia">
             <img class="submarca-kids" src="./assets/images/submarcas/submarca-kids.svg" alt="Celebra Kids">
           </div>
         </div>
@@ -183,7 +186,7 @@
     </section>
 
     <section class="areas">
-      <h2 class="titulo-rosa-laranja area-titulo-posicao">Conheça melhor a IBCidade</h2>
+      <h2 class="titulo-lilas-azul area-titulo-posicao">Conheça melhor a IBCidade</h2>
       <div class="areas-container">
         <a href="#"><img src="assets/images/submarcas/submarca-pgms.svg" alt="Mulher Unica"></a>
         <a href="#"><img src="assets/images/submarcas/submarca-mulher.svg" alt="Mulher Unica"></a>
@@ -195,8 +198,21 @@
       </div>
     </section>
     <section class="dizimos">
+      <h2 class="titulo-rosa-laranja area-titulo-posicao">Dízimos e Ofertas</h2>
       <div class="dizimos-container">
-        <h2>Dízimos e Ofertas</h2>
+        <div class="dizimos-flex">
+          <span><strong>Igreja Batista Cidade Jardim</strong></span>
+          <span><strong>CNPJ</strong> 08.251.439/001-07</span>
+        </div>
+        <div class="dizimos-flex">
+          <span> <strong>Agencia</strong> 0633</span>
+          <span><strong>Conta</strong> 15-5</span>
+          <span><strong>Operação</strong> 003</span>
+        </div>
+        <div class="dizimos-flex">
+          <span><strong>PIX</strong></span>
+          <span>ibcjnatal@gmail.com</span>
+        </div>
       </div>
 
     </section>
