finalizado rodape laranja

--- a/index.html
+++ b/index.html
@@ -218,12 +218,26 @@
     </section>
     </main>
     <footer>
-      <section class="footer-container"></section>
-    </footer>
+      <section class="footer">
+        <div class="footer-container">
+          <img src="./assets/images/marcas/marca-ibcidade-branco.svg" width="300px" alt="Logo IBCidade">
+          <div class="footer-flex">
+            <span><ion-icon name="location-outline"></ion-icon> Alameda das Acácias, 33 - Neópolis, <br>Natal - RN 59080-560</span>
+          <span><ion-icon name="call-outline"></ion-icon> (84) 3217-8512</span>
+        </div>
+        <div class="footer-icones">
+          <ion-icon name="logo-instagram"></ion-icon>
+          <ion-icon name="logo-facebook"></ion-icon>
+          <ion-icon name="logo-youtube"></ion-icon>
+        </div>
+        </div>
+  </div>
+  </section>
+  </footer>
 
 
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
