alteração no arquivo style

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&family=Sora:wght@100;200;300;400;500;600;700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <link rel="stylesheet" href="./assets/css/titulos.css">
+  <!-- <link rel="stylesheet" href="./assets/css/titulos.css"> -->
 
   <title>IBCidade - Um lugar de pessoas simples que amam a Jesus</title>
 
