--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 </head>
 
 <body>
-  <header class="header-container">
-    <div class="container-menu">
-      <div class="menu-logo">
+  <header class="header">
+    <div class="header_menu">
+      <div class="header_menu_logo">
         <a href="#">
           <img src="./assets/images/marcas/marca-completa-1.svg" width="300" alt="Logo da IBCidade">
         </a>
       </div>
       <nav>
-        <ul class="menu">
+        <ul class="header_menu_link">
           <li><a href="#">Quem somos</a></li>
           <li><a href="#">PGMs</a></li>
           <li><a href="#">Novas gerações</a></li>
@@ -41,7 +41,7 @@
   <div>
     <!-- SEÇÃO BANNER -->
     <section class="galery">
-      <div class="fotos">
+      <div class="galery_fotos">
         <img src="./assets/images/banners/serie.jpg" alt="serie">
         <img src="./assets/images/banners/culto-jovem.jpg" alt="">
         <img src="./assets/images/banners/cr.jpg" alt="">
