feito o nesting de todas as paginas

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
 
     <!-- SEÇÃO VÍDEO -->
     <section class="video">
-      <div class="video-container">
-        <div class="horario">
-          <h2 class="titulo-verde-azul">Celebrações ao vivo todos os domingos</h2>
+      <div class="video_container">
+        <div class="video_horario">
+          <h2>Celebrações ao vivo todos os domingos</h2>
           <div>10:30h | 18h</div>
           <a class="btn-youtube" href="https://www.youtube.com/c/ibcidade" target="_blank">
             <ion-icon name="logo-youtube"></ion-icon>
@@ -71,11 +71,10 @@
 
     <!-- SEÇÃO APP -->
     <section class="app">
-      <div class="app-container">
-        <div class="app-informacoes">
-          <h2 class="titulo-lilas-azul">Já baixou o<br>app IBCidade?</h2>
-          <p>O app IBCidade chegou para deixar nossa igreja ainda mais conectada. Baixe agora e fique por dentro de tudo
-            que está acontecendo</p>
+      <div class="app_container">
+        <div class="app_container_info">
+          <h2>Já baixou o<br>app IBCidade?</h2>
+          <p>O app IBCidade chegou para deixar nossa igreja ainda mais conectada.</p>
 
           <div class="btn-app">
             <a class="btn-app-store" href="#">
@@ -103,11 +102,11 @@
 
     <!-- SEÇÃO AGENDA -->
     <div class="agenda">
-      <div class="agenda-container">
+      <div class="agenda_container">
         <div>
-          <h2 class="titulo-azul-verde">Agenda<br>da semana</h2>
+          <h2>Agenda<br>da semana</h2>
           <p>Aqui você encontrará o que acontece na IBCidade durante a semana.</p>
-          <div class="agenda-imagens">
+          <div class="agenda_container_imagens">
             <img class="submarca-cafe" src="./assets/images/submarcas/submarca-cafe.svg" width="90px"
               alt="Café com Bíblia">
             <img class="submarca-celebrando" src="./assets/images/submarcas/submarca-celebrando.svg" width="90px"
@@ -184,10 +183,10 @@
       </div>
     </div>
     </section>
-
+    <!-- SEÇÃO AREAS -->
     <section class="areas">
-      <h2 class="titulo-lilas-azul area-titulo-posicao">Conheça melhor a IBCidade</h2>
-      <div class="areas-container">
+      <h2 class="area-titulo-posicao">Conheça melhor a IBCidade</h2>
+      <div class="areas_container">
         <a href="#"><img src="assets/images/submarcas/submarca-pgms.svg" alt="Mulher Unica"></a>
         <a href="#"><img src="assets/images/submarcas/submarca-mulher.svg" alt="Mulher Unica"></a>
         <a href="#"><img src="assets/images/submarcas/submarca-celebrando.svg" alt="Celebrando Restauração"></a>
@@ -197,41 +196,55 @@
         <a href="#"><img src="assets/images/submarcas/submarca-parabolas.svg" alt="Família IBCidade"></a>
       </div>
     </section>
+
+    <!-- SEÇÃO DÍZIMOS -->
     <section class="dizimos">
-      <h2 class="titulo-rosa-laranja area-titulo-posicao">Dízimos e Ofertas</h2>
-      <div class="dizimos-container">
-        <div class="dizimos-flex">
+      <h2 class="area-titulo-posicao">Dízimos e Ofertas</h2>
+      <div class="dizimos_container">
+        <div class="dizimos_flex">
           <span><strong>Igreja Batista Cidade Jardim</strong></span>
           <span><strong>CNPJ</strong> 08.251.439/001-07</span>
         </div>
-        <div class="dizimos-flex">
+        <div class="dizimos_flex">
           <span> <strong>Agencia</strong> 0633</span>
           <span><strong>Conta</strong> 15-5</span>
           <span><strong>Operação</strong> 003</span>
         </div>
-        <div class="dizimos-flex">
+        <div class="dizimos_flex">
           <span><strong>PIX</strong></span>
           <span>ibcjnatal@gmail.com</span>
         </div>
       </div>
-
     </section>
     </main>
+
+    <!-- FOOTER -->
     <footer>
       <section class="footer">
-        <div class="footer-container">
+        <div class="footer_container">
           <img src="./assets/images/marcas/marca-ibcidade-branco.svg" width="300px" alt="Logo IBCidade">
-          <div class="footer-flex">
-            <span><ion-icon name="location-outline"></ion-icon> Alameda das Acácias, 33 - Neópolis, <br>Natal - RN 59080-560</span>
-          <span><ion-icon name="call-outline"></ion-icon> (84) 3217-8512</span>
+          <div class="footer_flex">
+            <span>
+              <ion-icon name="location-outline"></ion-icon> Alameda das Acácias, 33 - Neópolis, <br>Natal - RN 59080-560
+            </span>
+            <span>
+              <ion-icon name="call-outline"></ion-icon> (84) 3217-8512
+            </span>
+          </div>
+          <div class="footer_icones">
+            <ion-icon name="logo-instagram"></ion-icon>
+            <ion-icon name="logo-facebook"></ion-icon>
+            <ion-icon name="logo-youtube"></ion-icon>
+          </div>
         </div>
-        <div class="footer-icones">
-          <ion-icon name="logo-instagram"></ion-icon>
-          <ion-icon name="logo-facebook"></ion-icon>
-          <ion-icon name="logo-youtube"></ion-icon>
-        </div>
-        </div>
-  </div>
+  <!-- </div> -->
+  </section>
+
+  <section class="marca">
+    <div class="marca_container">
+      <h3>IBC Igreja Batista Cidade | 2022 | Design: Catavento | Desenvolvimento: Code System</h3>
+    </div>
+
   </section>
   </footer>
 
