iniciando as media querys

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <div class="header_menu">
       <div class="header_menu_logo">
         <a href="#">
-          <img src="./assets/images/marcas/marca-completa-1.svg" width="300" alt="Logo da IBCidade">
+          <img class="header_img_logo1" src="./assets/images/marcas/marca-completa-1.svg" width="300" alt="Logo da IBCidade">
+          <img class="header_img_logo2" src="./assets/images/marcas/simbolo-1.svg" width="50" alt="Logo da IBCidade" >
         </a>
       </div>
       <nav>
@@ -38,14 +39,13 @@
     </div>
   </header>
 
-  <div>
     <!-- SEÇÃO BANNER -->
     <section class="galery">
-      <div class="galery_fotos">
-        <img src="./assets/images/banners/serie.jpg" alt="serie">
-        <img src="./assets/images/banners/culto-jovem.jpg" alt="">
-        <img src="./assets/images/banners/cr.jpg" alt="">
-        <img src="./assets/images/banners/serie.jpg" alt="serie">
+        <div class="galery_fotos">
+          <img src="./assets/images/banners/serie.jpg" alt="serie">
+          <img src="./assets/images/banners/culto-jovem.jpg" alt="">
+          <img src="./assets/images/banners/cr.jpg" alt="">
+          <img src="./assets/images/banners/serie.jpg" alt="serie">
       </div>
     </section>
 
@@ -84,7 +84,7 @@
 
             <a class="btn-google-store"
               href="https://play.google.com/store/apps/details?id=br.com.inchurch.batistacidadejardim" target="_blank">
-              <img class="logo-google" src="./assets/images/icons/icons8-google-play.svg" width="30px" alt="">
+              <img class="logo-google" src="./assets/images/icons/google-play.svg" width="30px" alt="">
               <div>Google Play</div>
             </a>
           </div>
@@ -237,20 +237,20 @@
             <ion-icon name="logo-youtube"></ion-icon>
           </div>
         </div>
-  <!-- </div> -->
-  </section>
+        <!-- </div> -->
+      </section>
 
-  <section class="marca">
-    <div class="marca_container">
-      <h3>IBC Igreja Batista Cidade | 2022 | Design: Catavento | Desenvolvimento: Code System</h3>
-    </div>
+      <section class="marca">
+        <div class="marca_container">
+          <h3>IBC Igreja Batista Cidade | 2022 | Design: Catavento | Desenvolvimento: Code System</h3>
+        </div>
 
-  </section>
-  </footer>
+      </section>
+    </footer>
 
 
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 
 </html>
