--- a/index.html
+++ b/index.html
@@ -23,16 +23,17 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg header sticky-top">
+  <nav class="navbar navbar-dark navbar-expand-lg header sticky-top">
     <div class="container-fluid header_menu">
       <a class="navbar-brand" href="#">
         <img class="fig_1" src="./assets/images/marcas/marca-completa-1.svg" alt="" width="300px">
+        <!--
         <img class="fig_2 aparecer" src="./assets/images/marcas/simbolo-1.svg" alt="" width="40px">
         <picture>
           <source class="header_img_logo2" media="(max-width: 1150px)" srcset="./assets/images/marcas/simbolo-1.svg">
-          <!-- <img class="header_img_logo1" src="./assets/images/marcas/marca-completa-1.svg" width="300"
-            alt="Logo da IBCidade"> -->
-        </picture>
+           <img class="header_img_logo1" src="./assets/images/marcas/marca-completa-1.svg" width="300"
+            alt="Logo da IBCidade">
+        </picture>-->
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -253,34 +254,7 @@
 
 
   <!-- SEÇÃO AREAS -->
-  <!-- <div class="container text-center areas">
-    <h2 class="area-titulo-posicao">Conheça melhor a IBCidade</h2>
-    <div class="row areas_container">
-      <div class="col">
-        <a href="#"><img src="assets/images/submarcas/submarca-pgms.svg" alt="Mulher Unica"></a>
-      </div>
-      <div class="col">
-        <a href="#"><img src="assets/images/submarcas/submarca-mulher.svg" alt="Mulher Unica"></a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        <a href="#"><img src="assets/images/submarcas/submarca-celebrando.svg" alt="Celebrando Restauração"></a>
-      </div>
-      <div class="col">
-        <a href="#"><img src="assets/images/submarcas/submarca-familia.svg" alt="Família IBCidade"></a>
-      </div>
-      <div class="col">
-        <a href="#"><img src="assets/images/submarcas/submarca-kids.svg" alt="Família IBCidade"></a>
-      </div>
-      <div class="col">
-        <a href="#"><img src="assets/images/submarcas/submarca-parabolas.svg" alt="Família IBCidade"></a>
-      </div>
-    </div>
-  </div> -->
-
-
-  <section class="areas">
+   <section class="areas">
     <h2 class="area-titulo-posicao">Conheça melhor a IBCidade</h2>
     <div class="areas_container">
       <a href="#"><img src="assets/images/submarcas/submarca-pgms.svg" alt="Mulher Unica"></a>
@@ -354,7 +328,7 @@
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
   <!-- Script JavaScript -->
-  <script src="assets/js/script.js"></script>
+  <!-- <script src="assets/js/script.js"></script> -->
 </body>
 
 </html>
