--- a/index.html
+++ b/index.html
@@ -27,14 +27,42 @@
     <div class="container-fluid header_menu">
       <a class="navbar-brand" href="#">
         <img class="fig_1" src="./assets/images/marcas/marca-completa-1.svg" alt="" width="300px">
-        <!--
-        <img class="fig_2 aparecer" src="./assets/images/marcas/simbolo-1.svg" alt="" width="40px">
-        <picture>
-          <source class="header_img_logo2" media="(max-width: 1150px)" srcset="./assets/images/marcas/simbolo-1.svg">
-           <img class="header_img_logo1" src="./assets/images/marcas/marca-completa-1.svg" width="300"
-            alt="Logo da IBCidade">
-        </picture>-->
       </a>
+      <!--
+      <nav class="navbar bg-light fixed-top">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img class="fig_1" src="./assets/images/marcas/marca-completa-1.svg" alt="" width="300px">
+          </a>
+        -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+        aria-controls="offcanvasNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav header_menu_link justify-content-end flex-grow-1 pe-3">
+            <li class="nav-item"><a class="nav-link" href="#">Quem somos</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">PGMs</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Novas gerações</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Local e contato</a></li>
+            <li class="nav-item"><a class="nav-link link-ofertas" class="link-ofertas" href="#">Ofertas</a></li>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </nav>
+
+
+
+
+
+  <!--
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -47,8 +75,9 @@
           <li class="nav-item"><a class="nav-link" href="#">Novas gerações</a></li>
           <li class="nav-item"><a class="nav-link" href="#">Local e contato</a></li>
           <li class="nav-item"><a class="nav-link link-ofertas" class="link-ofertas" href="#">Ofertas</a></li>
+        -->
 
-          <!-- <li class="nav-item dropdown">
+  <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Dropdown
             </a>
@@ -60,10 +89,10 @@
             </ul>
           </li> -->
 
-        </ul>
+  </ul>
 
-      </div>
-    </div>
+  </div>
+  </div>
   </nav>
 
 
@@ -119,7 +148,7 @@
   </section> -->
 
   <!-- SEÇÃO VÍDEO -->
-   <section class="video">
+  <section class="video">
     <div class="video_container">
       <div class="video_horario">
         <h2>Celebrações ao vivo todos os domingos</h2>
@@ -254,7 +283,7 @@
 
 
   <!-- SEÇÃO AREAS -->
-   <section class="areas">
+  <section class="areas">
     <h2 class="area-titulo-posicao">Conheça melhor a IBCidade</h2>
     <div class="areas_container">
       <a href="#"><img src="assets/images/submarcas/submarca-pgms.svg" alt="Mulher Unica"></a>
