media do responsivo1

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-dark navbar-expand-lg header sticky-top">
+  <nav class="navbar navbar-dark navbar-expand-lg header">
     <div class="container-fluid header_menu">
       <a class="navbar-brand" href="#">
         <img class="fig_1" src="./assets/images/marcas/marca-completa-1.svg" alt="" width="300px">
@@ -58,10 +58,6 @@
     </div>
   </nav>
 
-
-
-
-
   <!--
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -94,11 +90,6 @@
   </div>
   </div>
   </nav>
-
-
-
-
-
   <!-- 
   <header class="header">
     <div class="header_menu">
@@ -123,9 +114,9 @@
     </div>
   </header> -->
 
-  <!-- SEÇÃO BANNER -->
+  <!-- CARROSSEL -->
 
-  <div class="container-fluid">
+  <div class="container-fluid tamanhoSlides">
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner img-altura">
         <div class="carousel-item active img-controle1" data-bs-interval="4000">
