media do responsivo4

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <span><strong>Conta</strong> 15-5</span>
         <span><strong>Operação</strong> 003</span>
       </div>
-      <div class="dizimos_flex">
+      <div class="dizimos_flex pix">
         <span><strong>PIX</strong></span>
         <span>ibcjnatal@gmail.com</span>
       </div>
