media do responsivo agenda2

--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
       <a class="navbar-brand" href="#">
         <img class="fig_1" src="./assets/images/marcas/marca-completa-1.svg" alt="" width="300px">
       </a>
-      <!--
-      <nav class="navbar bg-light fixed-top">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img class="fig_1" src="./assets/images/marcas/marca-completa-1.svg" alt="" width="300px">
-          </a>
-        -->
+
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar">
         <span class="navbar-toggler-icon"></span>
@@ -57,65 +51,13 @@
       </div>
     </div>
   </nav>
-
-  <!--
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-
-        <ul class="navbar-nav header_menu_link mx-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="#">Quem somos</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">PGMs</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Novas gerações</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Local e contato</a></li>
-          <li class="nav-item"><a class="nav-link link-ofertas" class="link-ofertas" href="#">Ofertas</a></li>
-        -->
-
-  <!-- <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li> -->
-
+  
   </ul>
-
   </div>
   </div>
   </nav>
-  <!-- 
-  <header class="header">
-    <div class="header_menu">
-      <div class="header_menu_logo">
-        <a href="#">
-          <picture>
-            <source class="header_img_logo2" media="(max-width: 1100px)" srcset="./assets/images/marcas/simbolo-1.svg">
-            <img class="header_img_logo1" src="./assets/images/marcas/marca-completa-1.svg" width="300"
-              alt="Logo da IBCidade">
-          </picture>
-        </a>
-      </div>
-      <nav>
-        <ul class="header_menu_link">
-          <li><a href="#">Quem somos</a></li>
-          <li><a href="#">PGMs</a></li>
-          <li><a href="#">Novas gerações</a></li>
-          <li><a href="#">Local e contato</a></li>
-          <li><a class="link-ofertas" href="#">Ofertas</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header> -->
-
+  
   <!-- CARROSSEL -->
-
   <div class="container-fluid tamanhoSlides">
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner img-altura">
@@ -128,15 +70,6 @@
       </div>
     </div>
   </div>
-
-  <!-- <section class="galery">
-    <div class="galery_fotos">
-      <img src="./assets/images/banners/serie.jpg" alt="serie">
-      <img src="./assets/images/banners/culto-jovem.jpg" alt="">
-      <img src="./assets/images/banners/cr.jpg" alt="">
-      <img src="./assets/images/banners/serie.jpg" alt="serie">
-    </div>
-  </section> -->
 
   <!-- SEÇÃO VÍDEO -->
   <section class="video">
@@ -332,9 +265,8 @@
 
     <section class="marca">
       <div class="marca_container">
-        <h3>IBC Igreja Batista Cidade | 2022 | Design: Catavento | Desenvolvimento: Code System</h3>
+        <h3>Igreja Batista Cidade | 2022 | Design: Catavento | Desenvolvimento: Code System</h3>
       </div>
-
     </section>
   </footer>
 
