--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&family=Sora:wght@100;200;300;400;500;600;700&display=swap"
     rel="stylesheet">
+
   <!-- Bootstrap Css -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -19,10 +21,10 @@
   <link rel="stylesheet" href="./assets/css/style.css">
 
   <title>IBCidade - Um lugar de pessoas simples que amam a Jesus</title>
-
 </head>
 
 <body>
+  <!-- MENU COM BOOTSTRAP -->
   <nav class="navbar navbar-dark navbar-expand-lg header">
     <div class="container-fluid header_menu">
       <a class="navbar-brand" href="#">
@@ -52,7 +54,7 @@
     </div>
   </nav>
   
-  <!-- CARROSSEL -->
+  <!-- CARROSSEL COM BOOTSTRAP-->
   <div class="container-fluid tamanhoSlides">
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner img-altura">
@@ -263,7 +265,6 @@
         <h3>Igreja Batista Cidade | 2022 | Design: Catavento | Desenvolvimento: Code System</h3>
       </div>
     </section>
-  </footer>
 
   <!-- Script Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
