--- a/index.html
+++ b/index.html
@@ -44,7 +44,37 @@
           <ul class="navbar-nav header_menu_link justify-content-end flex-grow-1 pe-3">
             <li class="nav-item"><a class="nav-link" href="#">Quem somos</a></li>
             <li class="nav-item"><a class="nav-link" href="#">PGMs</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Novas gerações</a></li>
+            <!-- MENU NOVAS GERAÇÕES -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">Novas Gerações</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Kids</a></li>
+                <li><a class="dropdown-item" href="#">Arrow</a></li>
+                <li><a class="dropdown-item" href="#">Jovens</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Generosidade</a></li>
+              </ul>
+            </li>
+            <!-- MENU DAS AREAS -->
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">Areas</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">CR</a></li>
+                <li><a class="dropdown-item" href="#">Mulher Única</a></li>
+                <li><a class="dropdown-item" href="#">IDV</a></li>
+                <li><a class="dropdown-item" href="#">Oração</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Café com Bíblia</a></li>
+              </ul>
+            </li>
+
+            <!-- <li class="nav-item"><a class="nav-link" href="#">Novas gerações <span><ion-icon name="caret-down-outline"></ion-icon></span> </a></li> -->
             <li class="nav-item"><a class="nav-link" href="#">Local e contato</a></li>
             <li class="nav-item"><a class="nav-link link-ofertas" class="link-ofertas" href="#">Ofertas</a></li>
             </li>
@@ -53,7 +83,7 @@
       </div>
     </div>
   </nav>
-  
+
   <!-- CARROSSEL COM BOOTSTRAP-->
   <div class="container-fluid tamanhoSlides">
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
@@ -266,17 +296,17 @@
       </div>
     </section>
 
-  <!-- Script Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-    crossorigin="anonymous"></script>
+    <!-- Script Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"></script>
 
-  <!-- Script Ionicon -->
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+    <!-- Script Ionicon -->
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-  <!-- Script JavaScript -->
-  <!-- <script src="assets/js/script.js"></script> -->
+    <!-- Script JavaScript -->
+    <!-- <script src="assets/js/script.js"></script> -->
 </body>
 
 </html>
