alterado cor de fundo da galeria

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+  <div class="fundobody">fundo</div>
   <!-- MENU COM BOOTSTRAP -->
   <nav class="navbar navbar-dark navbar-expand-lg header">
     <div class="container-fluid header_menu">
