adicionando animacao com JS

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
   </div>
 
   <!-- SEÇÃO VÍDEO -->
-  <section class="video">
+  <section class="video js-scroll">
     <div class="video_container">
       <div class="video_horario">
         <h2>Celebrações ao vivo todos os domingos</h2>
@@ -120,7 +120,7 @@
   </section>
 
   <!-- SEÇÃO APP -->
-  <section class="app">
+  <section class="app js-scroll">
     <div class="app_container">
       <div class="app_container_info">
         <h2>Já baixou o<br>app IBCidade?</h2>
@@ -151,7 +151,7 @@
   </section>
 
   <!-- SEÇÃO AGENDA -->
-  <div class="agenda">
+  <div class="agenda js-scroll">
     <div class="agenda_container">
       <div>
         <h2>Agenda<br>da semana</h2>
@@ -235,7 +235,7 @@
 
 
   <!-- SEÇÃO AREAS -->
-  <section class="areas">
+  <section class="areas js-scroll">
     <h2 class="area-titulo-posicao">Conheça melhor a IBCidade</h2>
     <div class="areas_container">
       <a href="#"><img src="assets/images/submarcas/submarca-pgms.svg" alt="Mulher Unica"></a>
@@ -307,7 +307,7 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
     <!-- Script JavaScript -->
-    <!-- <script src="assets/js/script.js"></script> -->
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
