alteração do menu, retirada de duas seções

--- a/index.html
+++ b/index.html
@@ -24,12 +24,11 @@
 </head>
 
 <body>
-  <div class="fundobody">fundo</div>
   <!-- MENU COM BOOTSTRAP -->
   <nav class="navbar navbar-dark navbar-expand-lg header">
     <div class="container-fluid header_menu">
       <a class="navbar-brand" href="#">
-        <img class="fig_1" src="./assets/images/marcas/marca-completa-1.svg" alt="" width="300px">
+        <img class="fig_1" src="./assets/images/marcas/IBCidade_marca_branca.svg" alt="" width="200px">
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
@@ -38,46 +37,31 @@
       </button>
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
-          <img class="fig_1" src="./assets/images/marcas/marca-completa-1.svg" alt="" width="300px">
+          <img class="fig_1" src="./assets/images/marcas/IBCidade_marca_branca.svg" alt="" width="200px">
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav header_menu_link justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item"><a class="nav-link" href="#">Quem somos</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#">PGMs</a></li>
-            <!-- MENU NOVAS GERAÇÕES -->
+
+            <!-- MENU MINISTÉRIOS -->
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">Novas Gerações</a>
+                aria-expanded="false">Ministérios</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Kids</a></li>
+                <li><a class="dropdown-item teste" href="#">Kids</a></li>
                 <li><a class="dropdown-item" href="#">Arrow</a></li>
                 <li><a class="dropdown-item" href="#">Jovens</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Generosidade</a></li>
-              </ul>
-            </li>
-            <!-- MENU DAS AREAS -->
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">Areas</a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">CR</a></li>
+                <li><a class="dropdown-item" href="#">Celebrando Restauração</a></li>
                 <li><a class="dropdown-item" href="#">Mulher Única</a></li>
                 <li><a class="dropdown-item" href="#">IDV</a></li>
-                <li><a class="dropdown-item" href="#">Oração</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Café com Bíblia</a></li>
+               
               </ul>
             </li>
-
             <!-- <li class="nav-item"><a class="nav-link" href="#">Novas gerações <span><ion-icon name="caret-down-outline"></ion-icon></span> </a></li> -->
-            <li class="nav-item"><a class="nav-link" href="#">Local e contato</a></li>
-            <li class="nav-item"><a class="nav-link link-ofertas" class="link-ofertas" href="#">Ofertas</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contato</a></li>
+            <li class="nav-item"><a class="nav-link link-ofertas" class="link-ofertas" href="#">Contribua</a></li>
             </li>
           </ul>
         </div>
@@ -85,7 +69,12 @@
     </div>
   </nav>
 
-  <!-- CARROSSEL COM BOOTSTRAP-->
+  <!-- PLANO DE FUNDO COM VÍDEO-->
+  <div class="video-container">
+    <img src="" alt="">
+  </div>
+
+  <!--CARROSSEL COM BOOTSTRAP
   <div class="container-fluid tamanhoSlides">
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner img-altura">
@@ -98,6 +87,7 @@
       </div>
     </div>
   </div>
+-->
 
   <!-- SEÇÃO VÍDEO -->
   <section class="video js-scroll">
@@ -119,7 +109,7 @@
     </div>
   </section>
 
-  <!-- SEÇÃO APP -->
+  <!-- SEÇÃO APP 
   <section class="app js-scroll">
     <div class="app_container">
       <div class="app_container_info">
@@ -149,6 +139,7 @@
     </div>
 
   </section>
+-->
 
   <!-- SEÇÃO AGENDA -->
   <div class="agenda js-scroll">
