--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
-          <ul class="navbar-nav header_menu_link justify-content-end flex-grow-1 pe-3">
+          <ul class="navbar-nav header_menu_link justify-content-end flex-grow-1 pe-5">
             <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#">PGMs</a></li>
 
@@ -97,7 +97,7 @@
         <div>10:30h | 18h</div>
         <a class="btn-youtube" href="https://www.youtube.com/c/ibcidade" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
-          ibcidade
+          IBCidade
         </a>
       </div>
       <div class="video-culto">
@@ -145,25 +145,39 @@
   <div class="agenda js-scroll">
     <div class="agenda_container">
       <div>
-        <h2>Agenda<br>da semana</h2>
+        <h2>Agenda da semana</h2>
         <p>Aqui você encontrará o que acontece na IBCidade durante a semana.</p>
-        <div class="agenda_container_imagens">
-          <img class="submarca-cafe" src="./assets/images/submarcas/submarca-cafe.svg" width="90px"
-            alt="Café com Bíblia">
-          <img class="submarca-celebrando" src="./assets/images/submarcas/submarca-celebrando.svg" width="90px"
-            alt="Café com Bíblia">
-          <img class="submarca-idv" src="./assets/images/submarcas/submarca-idv.svg" width="90px" alt="Café com Bíblia">
-          <img class="submarca-kids" src="./assets/images/submarcas/submarca-kids.svg" alt="Celebra Kids">
-        </div>
-      </div>
-
       <div>
+        
+        <div class="agenda-bloco">
+          <h3>Domingo</h3>
+          <div class="agenda-flex domingo">
+            <div>IDV</div>
+            <div class="agenda-hora">09:00h</div>
+            <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
+                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+          </div>
+          <div class="agenda-flex domingo">
+            <div>Celebrações
+            </div>
+            <div class="agenda-hora">10:30h | 18:00h</div>
+            <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
+                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+          </div>
+          <div class="agenda-flex">
+            <div>Kids</div>
+            <div class="agenda-hora">18:00h</div>
+            <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
+                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+          </div>
+        </div>
+
         <div class="agenda-bloco">
           <h3>Segunda à sexta</h3>
           <div class="agenda-flex">
             <div>Café com Bíblia</div>
             <div class="agenda-hora">08:00h</div>
-            <a href="https://www.instagram.com/ibcidade/reels/" target="_blank"> <img class="icone-instagram"
+            <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/reels/" target="_blank"> <img class="icone-instagram"
                 src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
           </div>
         </div>
@@ -182,43 +196,21 @@
           <div class="agenda-flex">
             <div>Celebrando Restauração</div>
             <div class="agenda-hora">20:00h</div>
-            <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
+            <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
                 src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
           </div>
         </div>
 
-        <div class="agenda-bloco">
+        <div class="agenda-bloco sem-borda">
           <h3>Sábado</h3>
           <div class="agenda-flex">
             <div>Arrow</div>
             <div class="agenda-hora">19:30h</div>
-            <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
+            <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
                 src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
           </div>
         </div>
 
-        <div class="agenda-bloco">
-          <h3>Domingo</h3>
-          <div class="agenda-flex domingo">
-            <div>IDV</div>
-            <div class="agenda-hora">09:00h</div>
-            <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
-          </div>
-          <div class="agenda-flex domingo">
-            <div>Celebrações
-            </div>
-            <div class="agenda-hora">10:30h | 18:00h</div>
-            <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
-          </div>
-          <div class="agenda-flex">
-            <div>Kids</div>
-            <div class="agenda-hora">18:00h</div>
-            <a href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
-          </div>
-        </div>
       </div>
     </div>
   </div>
