--- a/index.html
+++ b/index.html
@@ -155,20 +155,20 @@
             <div>IDV</div>
             <div class="agenda-hora">09:00h</div>
             <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> IBCidade</a>
           </div>
           <div class="agenda-flex domingo">
             <div>Celebrações
             </div>
             <div class="agenda-hora">10:30h | 18:00h</div>
             <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> IBCidade</a>
           </div>
           <div class="agenda-flex">
             <div>Kids</div>
             <div class="agenda-hora">18:00h</div>
             <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> IBCidade</a>
           </div>
         </div>
 
@@ -178,7 +178,7 @@
             <div>Café com Bíblia</div>
             <div class="agenda-hora">08:00h</div>
             <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/reels/" target="_blank"> <img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> IBCidade</a>
           </div>
         </div>
 
@@ -197,7 +197,7 @@
             <div>Celebrando Restauração</div>
             <div class="agenda-hora">20:00h</div>
             <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> IBCidade</a>
           </div>
         </div>
 
@@ -207,7 +207,7 @@
             <div>Arrow</div>
             <div class="agenda-hora">19:30h</div>
             <a class="btn-ibcidade" href="https://www.instagram.com/ibcidade/" target="_blank"><img class="icone-instagram"
-                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> ibcidade</a>
+                src="./assets/images/icons/icon-instagram.svg" alt="Instagran da Igreja"> IBCidade</a>
           </div>
         </div>
 
