--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 
 
   <!-- SEÇÃO AREAS -->
-  <section class="areas js-scroll">
+  <section class="areas js-scroll ativo">
     <h2 class="area-titulo-posicao">Conheça melhor a IBCidade</h2>
     <div class="areas_container">
       <a href="#"><img src="assets/images/submarcas/submarca-pgms.svg" alt="Mulher Unica"></a>
@@ -230,6 +230,7 @@
       <a href="#"><img src="assets/images/submarcas/submarca-parabolas.svg" alt="Família IBCidade"></a>
     </div>
   </section>
+
 
   <!-- SEÇÃO DÍZIMOS -->
   <section class="dizimos">
